tests/expected_invalid_domain_foreign_fn.diag.out
<input>:2:8: error: `domain` modules must not declare `foreign fn`
    public foreign fn getenv(name: CString) -> CString
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
